Pull in translated strings
Shout out to all the localizing people, thank you!

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_disconnect">Verbindung trennen</string>
     <string name="action_copy_logs">Protokolle kopieren</string>
     <string name="state_disconnected">Getrennt</string>
-    <string name="guide_bullet_text_1">Vergiss nicht Bugs an unsere Entwickler zu melden.</string>
+    <string name="guide_bullet_text_1">Vergiss nicht, Fehler an unsere Entwickler zu melden.</string>
     <string name="action_configure">Konfigurieren</string>
     <string name="action_cancel">Abbrechen</string>
     <string name="action_reconnect">Neu verbinden</string>
@@ -15,11 +15,11 @@
     <string name="action_start">VPN starten</string>
     <string name="action_stop">VPN stoppen</string>
     <string name="state_connected">Verbunden</string>
-    <string name="state_connecting">Verbinden</string>
+    <string name="state_connecting">Wird verbunden …</string>
     <string name="state_disconnecting">Verbindung wird getrennt</string>
     <string name="app_routing_other_apps">Andere Apps</string>
     <string name="notification_channel_description">Updates über TorVPN anzeigen.</string>
-    <string name="notification_channel_name">TorVPN Benachrichtigungen</string>
+    <string name="notification_channel_name">TorVPN-Benachrichtigungen</string>
     <string name="apps">Apps</string>
     <string name="apps_description_all_protected">Alle Anwendungen verschlüsselt</string>
     <string name="tor_logs">Tor-Logs</string>
@@ -32,25 +32,24 @@
     <string name="label_not_protected">Keine geschützt</string>
     <string name="label_some_protected">Einige geschützt</string>
     <string name="always_on_vpn_description">Android-Systemeinstellungen öffnen</string>
-    <string name="guide_bullet_head_1">Du bist bereit, mit den Tests zu beginnen</string>
+    <string name="guide_bullet_head_1">Fehler melden</string>
     <string name="guide_bullet_head_2">Aber tu nichts Riskantes</string>
     <string name="guide_bullet_text_2">Dies ist eine Vorabversion der App, die für heikle Aktivitäten nicht geeignet ist.</string>
     <string name="stats_delta">%1$s/s</string>
     <string name="stats_combined">↓%2$s %1$s/s - ↑%4$s %3$s/s</string>
-    <string name="title_guide">Diese App ist sehr
-\nexperimentell</string>
+    <string name="title_guide">Diese App ist sehr \nexperimentell</string>
     <string name="tor_logs_description">Tor-Logs ansehen und kopieren</string>
     <string name="error_something_went_wrong">Etwas ist schiefgegangen</string>
     <string name="down">Runter.</string>
-    <string name="error_view_logs">Logs anzeigen</string>
+    <string name="error_view_logs">Tor-Protokolle ansehen</string>
     <string name="this_browser">Dieser Browser</string>
     <string name="this_app">Diese App</string>
     <string name="quickstart_description">Automatische Verbindung mit Tor-Netzwerk, wenn gestartet</string>
     <string name="exit_location">Ausstiegsort</string>
-    <string name="exit_location_description">Der automatische Modus wählt Ausstiegsrelays von überall im Netz aus, unabhängig vom Standort. Dies trägt dazu bei, deine Anonymität zu schützen, indem es verhindert, dass deine Aktivitäten zugeordnet werden können.</string>
-    <string name="exit_location_automatic">Automatisch (am sichersten)</string>
+    <string name="exit_location_description">Während du Tor verwendest werden Webseiten und Apps denken, dass du dich vom selben Land wie dein Ausgangsknoten verbindest, welcher der finale Schritt in jedem deiner Tor Kanäle ist.</string>
+    <string name="exit_location_automatic">Zufällig per Kanal</string>
     <string name="kill_switch_description">Blockiert Anwendungen, die sich mit dem Internet verbinden, wenn das Tor-Netzwerk nicht erreicht werden kann</string>
-    <string name="error_detail_message">Tor VPN konnte sich nicht mit dem Tor-Netzwerk verbinden.</string>
+    <string name="error_detail_message">Tor-VPN konnte sich nicht mit dem Tor-Netzwerk verbinden.</string>
     <string name="circuit_app_description">Kanal für %1$s</string>
     <string name="connection_description">Konfiguriere, wie du dich mit Tor verbindest</string>
     <string name="quickstart">Automatische Verbindung</string>
@@ -62,7 +61,7 @@
     <string name="guard">Wächter</string>
     <string name="unknown">Unbekannt</string>
     <string name="guide_got_it">Verstanden</string>
-    <string name="idle_toolbar_title">Tor VPN</string>
+    <string name="idle_toolbar_title">Tor-VPN</string>
     <string name="debugging">Debuggen</string>
     <string name="use_a_bridge">Benutze eine Brücke</string>
     <string name="current_bridge">Aktuelle Brücke</string>
@@ -73,10 +72,10 @@
     <string name="use_a_bridge_info">Brücken helfen dir beim Zugriff auf das Tor-Netzwerk an Orten, an denen Tor blockiert ist. Je nachdem, wo du dich befindest, kann eine Brücke besser funktionieren als eine andere.</string>
     <string name="action_open_app">Öffne %1$s</string>
     <string name="closed_connection">%1$s-&gt;%2$s: geschlossene Verbindung</string>
-    <string name="obfs4_description">Lässt deinen Datenverkehr wie zufällige Daten aussehen</string>
-    <string name="bridge_address_description">Füge eine Brücke hinzu, die von einer vertrauenswürdigen Organisation oder einer dir bekannten Person bereitgestellt wird</string>
-    <string name="get_new_bridges">Neue Brücken holen</string>
-    <string name="get_new_bridges_description">Da die Brücken-Adressen nicht öffentlich sind, musst du eine vom Tor Projekt anfordern.</string>
+    <string name="obfs4_description">Tarnt deinen Datenverkehr als Zufallsdaten</string>
+    <string name="bridge_address_description">Gib die dir bereits bekannten Brückenadressen ein</string>
+    <string name="get_new_bridges">Weitere Brücken suchen</string>
+    <string name="get_new_bridges_description">Da die Brücken-Adressen nicht öffentlich sind, musst du eine vom Tor-Projekt anfordern.</string>
     <string name="email_providers">Gmail oder Riseup</string>
     <string name="telegram_bot_subtitle">Nachricht %s</string>
     <string name="email_bot_subtitle">E-Mail %s</string>
@@ -92,7 +91,7 @@
     <string name="bootstrap_at">Bootstrap um: %1$s</string>
     <string name="new_connection">%1$s-&gt;%2$s: NEUE Verbindung mit %3$s (app %4$d)</string>
     <string name="new_connection_hop">%1$s-&gt;%2$s: hop %3$d: %4$s (%5$s)</string>
-    <string name="failed_connection">%1$s-&gt;%2$s: FEHLGESCHLAGENE Verbindung zu %3$s: %4$s (app %5$d)</string>
+    <string name="failed_connection">%1$s-&gt;%2$s: FEHLGESCHLAGENE Verbindung mit %3$s: %4$s (App %5$d)</string>
     <string name="failed_connection_closed">%1$s-&gt;%2$s: FEHLGESCHLAGEN: %3$s</string>
     <string name="reload_all_circuits_description">Es werden neue Kanäle für alle deine Anwendungen eingerichtet. Einige Anwendungen und Websites erkennen dich daher möglicherweise nicht und melden dich von ihren Diensten ab.</string>
     <string name="reload_app_circuits">Diesen Kanal neu laden?</string>
@@ -103,14 +102,14 @@
     <string name="circuits">Kanäle</string>
     <string name="bridge_option_obfs4_built">obfs4 (eingebaut)</string>
     <string name="bridge_settings">Brücken-Einstellungen</string>
-    <string name="built_in_bridges">Wähle eine eingebaute Brücke</string>
+    <string name="built_in_bridges">Deine Brücken</string>
     <string name="obfs4_built_in">obfs4 (eingebaut)</string>
     <string name="snowflake_built_in">Snowflake (eingebaut)</string>
-    <string name="snowflake_description">Leitet deine Verbindung durch Snowflake-Proxys, damit es so aussieht, als würdest du einen Videoanruf tätigen</string>
-    <string name="add_new_bridge">Eine neue Brücke hinzufügen</string>
+    <string name="snowflake_description">Tarnt deinen Datenverkehr als Videoanruf</string>
+    <string name="add_new_bridge">Neue Brücken hinzufügen</string>
     <string name="bridge_addresses">Brücken-Adressen</string>
     <string name="bridge_address">Brücken-Adresse eingeben</string>
-    <string name="ask_bridge_bot">Frag den Brücken-Bot</string>
+    <string name="ask_bridge_bot">Brücken anfordern</string>
     <string name="help">Hilfe</string>
     <string name="qs_error">Verbindungsfehler</string>
     <string name="qs_show_error">Fehler anzeigen</string>
@@ -119,30 +118,62 @@
     <string name="general_description">Konfiguriere allgemeine Einstellungen</string>
     <string name="apps_description">Wähle Apps, die durch Tor geleitet werden sollen</string>
     <string name="name_and_icon">Name und Symbol</string>
-    <string name="launcher_hint">Wähle ein Symbol und einen Namen für deinen Startbildschirm und die App-Schublade. Das standardmäßige Tor VPN-Symbol und der Name werden weiterhin für Benachrichtigungen verwendet.</string>
+    <string name="launcher_hint">Wähle ein Symbol und einen Namen für deinen Startbildschirm und die App-Schublade. Das standardmäßige Tor-VPN-Symbol und der Name werden weiterhin für Benachrichtigungen verwendet.</string>
     <string name="warnings">Warnungen</string>
     <string name="new_circuits_warnings">Neue Warnungen zu Kanälen</string>
     <string name="new_circuits_warnings_description">Warne vor dem Neuladen von Kanälen.</string>
     <string name="start_again">Neu starten</string>
     <string name="signal">Signal</string>
     <string name="report_bug">Einen Fehler melden</string>
-    <string name="contact_support">Kontaktieren Sie Support</string>
+    <string name="contact_support">Kontaktiere den Support</string>
     <string name="email">E-Mail</string>
     <string name="new_bridges">Ich brauche neue Brücken</string>
     <string name="fetching_bridges">Hole deine neuen Brücken…</string>
     <string name="new_bridges_result">Hier sind deine neuen Brücken:</string>
-    <string name="bridge_bot">Brücken Bot</string>
+    <string name="bridge_bot">Brücken-Bot</string>
     <string name="bot_msg_results">Hier sind deine Brücken</string>
-    <string name="whatsapp">Whatsapp</string>
+    <string name="whatsapp">WhatsApp</string>
     <string name="view_faq">Unsere FAQ ansehen</string>
-    <string name="help_description_wip">Tor VPN befindet sich noch in der Entwicklung, und einige Funktionen funktionieren möglicherweise nicht wie erwartet.</string>
+    <string name="help_description_wip">Tor-VPN befindet sich noch in der Entwicklung, und einige Funktionen funktionieren möglicherweise nicht wie erwartet.</string>
     <string name="help_description_bug_report">Wenn du auf ein Problem stößt, das in unseren FAQ nicht beantwortet wird, öffne bitte einen Fehlerbericht oder kontaktiere den Support.</string>
-    <string name="bug_tor_forum">Im Tor Forum</string>
-    <string name="bug_gitlab">Auf Gitlab</string>
+    <string name="bug_tor_forum">Im Tor-Forum</string>
+    <string name="bug_gitlab">Auf GitLab</string>
     <string name="bot_msg_welcome">Willkommen, müder Reisender</string>
-    <string name="use_bridges">Brücken benutzen</string>
+    <string name="use_bridges">Brücken speichern</string>
     <string name="action_refresh">Auffrischen</string>
     <string name="change">Ändern</string>
     <string name="refresh_all_circuits">Alle Kanäle aktualisieren?</string>
-    <string name="obfs4_bridge">obfs4 Brücke</string>
+    <string name="obfs4_bridge">Obfs4-Brücke</string>
+    <string name="about">Über</string>
+    <string name="about_description">Erfahre mehr über Tor-VPN</string>
+    <string name="version">Version</string>
+    <string name="last_updated">Zuletzt aktualisiert</string>
+    <string name="about_description_long">Tor-VPN ist eine experimentelle VPN-App von %1$s, den Entwicklern von Tor und dem Tor-Browser — den weltweit stärksten Tools für Privatsphäre und Freiheit im Internet.</string>
+    <string name="tor_project">Tor-Projekt</string>
+    <string name="no_internet">No internet</string>
+    <string name="up_content_description">Hochladen</string>
+    <string name="current_state">Aktueller Status:</string>
+    <string name="down_content_description">Herunterladen</string>
+    <string name="app_routing_system_apps">System-Apps</string>
+    <string name="exit_location_safest">Am sichersten</string>
+    <string name="app_routing_show_apps">Zeige %1$s Apps</string>
+    <string name="app_routing_hide_apps">Verstecke %1$s Apps</string>
+    <string name="privacy_policy">Datenschutzrichtlinie</string>
+    <string name="open_source_licenses">Quelloffen</string>
+    <string name="app_icon">App-Symbol</string>
+    <string name="connect_automatically">Automatisch verbinden</string>
+    <string name="connect_automatically_description">Automatische Verbindung mit Tor-Netzwerk, wenn gestartet</string>
+    <string name="advanced">Erweitert</string>
+    <string name="about_tor_vpn">Über Tor VPN</string>
+    <string name="default_icon_and_name">Standardsymbol und Name</string>
+    <string name="no_bridge">Keine Brücken benutzen</string>
+    <string name="the_internet">Das Internet</string>
+    <string name="app_name_variant_2" translatable="false">Flashlight</string>
+    <string name="stats_down" translatable="false">%1$s</string>
+    <string name="obfs4" translatable="false">obfs4</string>
+    <string name="app_name_variant_3" translatable="false">Ping Pong</string>
+    <string name="stats_up" translatable="false">%1$s</string>
+    <string name="app_name_variant_1" translatable="false">Calculator</string>
+    <string name="copied_clipboard">In Zwischenablage kopiert</string>
+    <string name="add_bridge">Brücken hinzufügen</string>
 </resources>
