--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -4,49 +4,49 @@
     <string name="action_cancel">キャンセル</string>
     <string name="action_try_again">再試行</string>
     <string name="action_connect">接続</string>
-    <string name="action_stop">VPNを停止</string>
+    <string name="action_stop">VPN を停止</string>
     <string name="action_disconnect">切断</string>
     <string name="action_reconnect">再接続</string>
-    <string name="action_protect_all_apps">全てのアプリを保護する</string>
+    <string name="action_protect_all_apps">すべてのアプリを保護する</string>
     <string name="action_protect_this_app">このアプリを保護する</string>
-    <string name="action_start">VPNを開始</string>
+    <string name="action_start">VPN を開始</string>
     <string name="action_copy_logs">ログをコピー</string>
     <string name="state_connected">接続済み</string>
-    <string name="state_connecting">接続中</string>
+    <string name="state_connecting">接続中…</string>
     <string name="state_disconnected">切断済み</string>
     <string name="state_disconnecting">切断中</string>
-    <string name="app_routing_tor_apps">Torによるアプリ</string>
+    <string name="app_routing_tor_apps">Tor 搭載アプリ</string>
     <string name="action_refresh_circuits">回線を更新</string>
     <string name="apps_description_all_protected">すべてのアプリが保護されています</string>
-    <string name="tor_logs_description">Torのログを閲覧・コピーする</string>
-    <string name="always_on_vpn">VPN常時オン</string>
+    <string name="tor_logs_description">Tor ログを閲覧・コピーする</string>
+    <string name="always_on_vpn">VPN 常時オン</string>
     <string name="app_routing_other_apps">その他のアプリ</string>
-    <string name="always_on_vpn_description">Androidのシステム設定を開く</string>
-    <string name="notification_channel_description">TorVPNのアップデートを表示します。</string>
-    <string name="notification_channel_name">TorVPNの通知</string>
+    <string name="always_on_vpn_description">Android のシステム設定を開く</string>
+    <string name="notification_channel_description">Tor VPN のアップデートを表示します。</string>
+    <string name="notification_channel_name">Tor VPN の通知</string>
     <string name="apps">アプリ</string>
-    <string name="guide_bullet_head_1">テストし始める準備はできています</string>
+    <string name="guide_bullet_head_1">バグを報告する</string>
     <string name="guide_bullet_head_2">ですが、リスクの大きいことはしないでください</string>
     <string name="guide_bullet_text_1">バグを発見した場合は開発者に報告をお願いします。</string>
     <string name="tor_logs">Tor ログ</string>
     <string name="guide_bullet_text_2">これはアプリのプレリリース版であり、機密性の高いアクティビティに使用するのは安全ではありません。</string>
-    <string name="kill_switch_description">Torネットワークにアクセスできない場合にアプリによるインターネット接続をブロックする</string>
+    <string name="kill_switch_description">Tor ネットワークにアクセスできない場合にアプリによるインターネット接続をブロックする</string>
     <string name="quickstart">自動接続</string>
     <string name="stats_delta">%1$s/秒</string>
     <string name="stats_combined">ダウンロード%2$s %1$s/秒 - アップロード %4$s %3$s/秒</string>
-    <string name="error_something_went_wrong">何かが違うようです</string>
+    <string name="error_something_went_wrong">問題が発生しました</string>
     <string name="kill_switch">キルスイッチ</string>
-    <string name="quickstart_description">起動時に自動的にTorネットワークに接続する</string>
+    <string name="quickstart_description">起動時に自動的に Tor ネットワークに接続する</string>
     <string name="exit_location">出口</string>
-    <string name="exit_location_automatic">自動(推奨)</string>
+    <string name="exit_location_automatic">回線ごとにランダム</string>
     <string name="this_browser">このブラウザー</string>
     <string name="this_app">このアプリ</string>
-    <string name="tor_powered_app">Torによるアプリ</string>
-    <string name="error_detail_message">Tor VPNはTorネットワークに接続できませんでした。</string>
-    <string name="connection_description">Torにどう接続するか設定する</string>
-    <string name="error_view_logs">ログを表示する</string>
+    <string name="tor_powered_app">Tor 搭載アプリ</string>
+    <string name="error_detail_message">Tor VPN は Tor ネットワークに接続できませんでした。</string>
+    <string name="connection_description">Tor への接続方法を設定する</string>
+    <string name="error_view_logs">Tor ログを表示</string>
     <string name="action_open_app">%1$sを開く</string>
-    <string name="guard">入口</string>
+    <string name="guard">ガード</string>
     <string name="connection">接続</string>
     <string name="app_routing_browsers">ブラウザー</string>
     <string name="guide_version_number" translatable="false">%1$s</string>
@@ -64,16 +64,15 @@
     <string name="reload_all_circuits_description">すべてのアプリに新しい回線が確立されます。その結果、一部のアプリやウェブサイトはあなたを認識できなくなり、そのサービスからログアウトする可能性があります。</string>
     <string name="new_connection_hop">%1$s-&gt;%2$s: トラフィック %3$d: %4$s (%5$s)</string>
     <string name="closed_connection">%1$s-&gt;%2$s: 接続が切断されました</string>
-    <string name="exit_location_description">自動モードは、場所に関係なく、ネットワーク内のどこからでも出口リレーを選択します。これは、あなたの活動がリンクされるのを防ぐことにより、あなたの匿名性を保護するのに役立ちます。</string>
+    <string name="exit_location_description">Tor を使用している間、ウェブサイトやアプリは、あなたが各 Tor 回線の最終ホップである出口リレーと同じ国から接続していると認識します。</string>
     <string name="down">受信データ</string>
     <string name="action_configure">設定</string>
-    <string name="connect_direct_to_tor">Torに直接接続する</string>
+    <string name="connect_direct_to_tor">Tor に直接接続する</string>
     <string name="circuit_app_description">%1$sの回線</string>
-    <string name="new_connection">%1$s-&gt;%2$s： %3$sへの新しい接続 (アプリ %4$d)</string>
+    <string name="new_connection">%1$s-&gt;%2$s: %3$sへの新しい接続 (アプリ %4$d)</string>
     <string name="bootstrap_at">Bootstrap :%1$s</string>
     <string name="action_reload_circuits">回線を再構築</string>
-    <string name="title_guide">このアプリは非常に
-\n実験的です</string>
+    <string name="title_guide">このアプリは非常に \n実験的です</string>
     <string name="use_a_bridge_info">ブリッジは Tor がブロックされている場所で、Tor ネットワークに安全にアクセスするのに役立ちます。あなたがお住いの地域によって、最適に機能するブリッジは異なる可能性があります。</string>
     <string name="bridge_option_obfs4_built">obfs4 (内蔵)</string>
     <string name="snowflake_built_in">Snowflake (内蔵)</string>
@@ -81,8 +80,8 @@
     <string name="none">なし</string>
     <string name="bridges">ブリッジ</string>
     <string name="add_new_bridge">新しいブリッジを追加する</string>
-    <string name="obfs4_description">トラフィックをランダムなデータのように見せる</string>
-    <string name="description_independent_tor_powered_app">このアプリはTor VPNとは独立した独自のTor接続を使用します。代わりに%1$sで接続を表示および設定してください。</string>
+    <string name="obfs4_description">トラフィックをランダムなデータに偽装します</string>
+    <string name="description_independent_tor_powered_app">このアプリは Tor VPN とは独立した独自の Tor 接続を使用します。代わりに %1$s で接続を表示および設定してください。</string>
     <string name="bridge_settings">ブリッジの設定</string>
     <string name="obfs4_built_in">obfs4 (内蔵)</string>
     <string name="debugging">デバッグ</string>
@@ -94,54 +93,86 @@
     <string name="current_bridge">現在のブリッジ</string>
     <string name="snowflake">Snowflake</string>
     <string name="bridge_addresses">ブリッジアドレス</string>
-    <string name="bridge_address_description">信頼できる組織や知人から提供されたブリッジを追加します。</string>
+    <string name="bridge_address_description">すでに知っているブリッジアドレスを入力する</string>
     <string name="action_save">保存</string>
-    <string name="snowflake_description">Snowflakeのプロキシを経由して接続をルーティングし、まるでビデオ通話をしているように見せかけます。</string>
+    <string name="snowflake_description">トラフィックをビデオ通話に偽装します</string>
     <string name="manual_bridge">手動選択</string>
-    <string name="built_in_bridges">内蔵ブリッジを選択する</string>
-    <string name="email_providers">GmailまたはRiseup</string>
+    <string name="built_in_bridges">あなたのブリッジ</string>
+    <string name="email_providers">Gmail または Riseup</string>
     <string name="get_new_bridges_description">ブリッジアドレスは公開されていないので、Tor Projectにリクエストする必要があります。</string>
     <string name="telegram_bot_subtitle">メッセージ %s</string>
     <string name="label_some_protected">部分的な保護</string>
     <string name="remove_bridge">ブリッジアドレスを削除</string>
-    <string name="ask_bridge_bot">ブリッジボットに聞く</string>
-    <string name="get_new_bridges">新しいブリッジを入手</string>
+    <string name="ask_bridge_bot">ブリッジをリクエストする</string>
+    <string name="get_new_bridges">他のブリッジを探す</string>
     <string name="email_bot_subtitle">メール %s</string>
     <string name="web_bot_subtitle">%sに行く</string>
     <string name="telegram">Telegram</string>
     <string name="web">ウェブ</string>
     <string name="help">ヘルプ</string>
     <string name="qs_error">接続に失敗しました</string>
-    <string name="qs_show_error">詳細を表示</string>
-    <string name="apps_description">Torを経由するアプリを選択</string>
+    <string name="qs_show_error">エラーを表示</string>
+    <string name="apps_description">Tor を経由するアプリを選択</string>
     <string name="general">一般</string>
     <string name="general_description">一般的な設定をする</string>
     <string name="name_and_icon">名前とアイコン</string>
-    <string name="launcher_hint">ホーム画面とアプリドロワーのアイコンと名前を選んでください。デフォルトのTor VPNアイコンと名前は、通知で引き続き使用されます。</string>
+    <string name="launcher_hint">ホーム画面とアプリドロワーのアイコンと名前を選んでください。デフォルトの Tor VPN アイコンと名前は、通知で引き続き使用されます。</string>
     <string name="new_circuits_warnings">新しい回線の警告</string>
     <string name="new_circuits_warnings_description">回線を再読み込みする前に警告します。</string>
     <string name="appearance">外観</string>
     <string name="warnings">警告</string>
-    <string name="new_bridges">新しいブリッジが必要です</string>
+    <string name="new_bridges">新しいブリッジをください</string>
     <string name="new_bridges_result">こちらが新しいブリッジです。</string>
     <string name="bridge_bot">ブリッジボット</string>
     <string name="bot_msg_welcome">ようこそ</string>
-    <string name="bot_msg_results">こちらがあなたのブリッジです。</string>
-    <string name="start_again">再起動</string>
+    <string name="bot_msg_results">こちらがあなたのブリッジです</string>
+    <string name="start_again">再試行</string>
     <string name="fetching_bridges">新しいブリッジを取得しています…</string>
-    <string name="use_bridges">ブリッジを使う</string>
+    <string name="use_bridges">ブリッジを保存</string>
     <string name="signal">Signal</string>
     <string name="report_bug">バグレポート</string>
     <string name="contact_support">サポートに問い合わせ</string>
     <string name="email">メールアドレス</string>
     <string name="whatsapp">Whatsapp</string>
-    <string name="help_description_wip">Tor VPN は開発中のため、一部の機能が期待どおりに動作しない場合があります。何卒ご了承下さい。</string>
-    <string name="view_faq">FAQを見る</string>
-    <string name="help_description_bug_report">FAQに記載されていない問題が発生した場合は、バグレポートを作成するか、サポートまでご連絡下さい。</string>
+    <string name="help_description_wip">Tor VPN は開発中のため、一部の機能が期待どおりに動作しない場合があります。何卒ご了承ください。</string>
+    <string name="view_faq">FAQ を見る</string>
+    <string name="help_description_bug_report">FAQ に記載されていない問題が発生した場合は、バグレポートを作成するか、サポートまでご連絡ください。</string>
     <string name="bug_tor_forum">Tor Forum</string>
     <string name="bug_gitlab">Gitlab</string>
     <string name="action_refresh">更新</string>
-    <string name="refresh_all_circuits">全ての回路を更新しますか？</string>
+    <string name="refresh_all_circuits">すべての回線を更新しますか？</string>
     <string name="change">変更</string>
     <string name="obfs4_bridge">obfs4 ブリッジ</string>
+    <string name="about">概要</string>
+    <string name="about_description">Tor VPN の詳細はこちら</string>
+    <string name="version">バージョン</string>
+    <string name="last_updated">最終更新日時</string>
+    <string name="tor_project">Tor Project</string>
+    <string name="about_description_long">Tor VPN は、オンラインでのプライバシーと自由のための世界最強のツールである Tor と Tor Browser の開発者である %1$s によって開発された、実験的な VPN アプリです。</string>
+    <string name="no_internet">インターネットに接続できません</string>
+    <string name="current_state">現在の状態:</string>
+    <string name="up_content_description">アップロード</string>
+    <string name="down_content_description">ダウンロード</string>
+    <string name="app_routing_system_apps">システムアプリ</string>
+    <string name="app_routing_show_apps">%1$s アプリを表示</string>
+    <string name="app_routing_hide_apps">%1$s アプリを非表示</string>
+    <string name="exit_location_safest">最も安全</string>
+    <string name="privacy_policy">プライバシーポリシー</string>
+    <string name="open_source_licenses">オープンソースライセンス</string>
+    <string name="app_icon">アプリアイコン</string>
+    <string name="connect_automatically">自動的に接続する</string>
+    <string name="connect_automatically_description">起動時に自動的に Tor ネットワークに接続する</string>
+    <string name="advanced">詳細設定</string>
+    <string name="about_tor_vpn">Tor VPN について</string>
+    <string name="default_icon_and_name">デフォルトのアイコンと名前</string>
+    <string name="no_bridge">ブリッジを使用しない</string>
+    <string name="the_internet">インターネット</string>
+    <string name="stats_down" translatable="false">%1$s</string>
+    <string name="obfs4" translatable="false">obfs4</string>
+    <string name="app_name_variant_3" translatable="false">Ping Pong</string>
+    <string name="stats_up" translatable="false">%1$s</string>
+    <string name="app_name_variant_1" translatable="false">Calculator</string>
+    <string name="app_name_variant_2" translatable="false">Flashlight</string>
+    <string name="copied_clipboard">クリップボードにコピーしました</string>
+    <string name="add_bridge">ブリッジを追加</string>
 </resources>
