--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -15,13 +15,13 @@
     <string name="tor_logs">Registros do Tor</string>
     <string name="action_copy_logs">Copiar registros</string>
     <string name="state_disconnected">Desconectado</string>
-    <string name="state_connecting">Conectando</string>
+    <string name="state_connecting">Conectando…</string>
     <string name="state_connected">Conectado</string>
     <string name="always_on_vpn">VPN sempre ligada</string>
     <string name="state_disconnecting">Desconectando</string>
     <string name="app_routing_browsers">Navegadores</string>
     <string name="action_save">Salvar</string>
-    <string name="ask_bridge_bot">Pergunte ao bot da ponte</string>
+    <string name="ask_bridge_bot">Solicitar pontes</string>
     <string name="telegram">Telegram</string>
     <string name="web">Web</string>
     <string name="email_providers">Gmail ou Riseup</string>
@@ -39,31 +39,30 @@
     <string name="connection">Conexão</string>
     <string name="help">Ajuda</string>
     <string name="action_refresh_circuits">Atualizar circuitos</string>
-    <string name="app_routing_tor_apps">Aplicativos fornecidos por Tor</string>
-    <string name="app_routing_other_apps">Outros aplicativos</string>
-    <string name="notification_channel_description">Mostra atualizações sobre o TorVPN.</string>
+    <string name="app_routing_tor_apps">Apps desenvolvidos por Tor</string>
+    <string name="app_routing_other_apps">Outros apps</string>
+    <string name="notification_channel_description">Mostra atualizações sobre TorVPN.</string>
     <string name="notification_channel_name">Notificações TorVPN</string>
-    <string name="apps_description_all_protected">Todos os aplicativos protegidos</string>
-    <string name="apps">Aplicativos</string>
-    <string name="exit_location_automatic">Automático (mais seguro)</string>
+    <string name="apps_description_all_protected">Todos os apps protegidos</string>
+    <string name="apps">Apps</string>
+    <string name="exit_location_automatic">Aleatório por circuito</string>
     <string name="label_not_protected">Nenhum app protegido</string>
-    <string name="title_guide">Este aplicativo é altamente
-\nexperimental</string>
+    <string name="title_guide">Este app é altamente \nexperimental</string>
     <string name="error_detail_message">O Tor VPN não conseguiu se conectar à rede Tor.</string>
     <string name="tor_logs_description">Visualize e copie seus registros do Tor</string>
-    <string name="guide_bullet_head_1">Você está pronto para começar a testar</string>
+    <string name="guide_bullet_head_1">Informar um erro</string>
     <string name="guide_bullet_head_2">Mas não faça nada arriscado</string>
     <string name="guide_bullet_text_1">Não se esqueça de relatar quaisquer bugs que encontrar aos nossos desenvolvedores.</string>
     <string name="stats_delta">%1$s/s</string>
     <string name="stats_combined">↓%2$s %1$s/s - ↑%4$s %3$s/s</string>
-    <string name="error_view_logs">Ver registros</string>
+    <string name="error_view_logs">Ver registros do Tor</string>
     <string name="connection_description">Configure como se conectar ao Tor</string>
-    <string name="kill_switch_description">Impedir que aplicativos se conectem à Internet se a rede Tor não puder ser acessada</string>
+    <string name="kill_switch_description">Impedir que apps se conectem à Internet se a rede Tor não puder ser acessada</string>
     <string name="quickstart">Conexão automática</string>
     <string name="exit_location">Sair da localização</string>
     <string name="circuit_app_description">Circuito para %1$s</string>
     <string name="this_browser">Este navegador</string>
-    <string name="this_app">Este aplicativo</string>
+    <string name="this_app">Este app</string>
     <string name="action_open_app">Abrir %1$s</string>
     <string name="bootstrap_at">Inicialização em: %1$s</string>
     <string name="snowflake_built_in">Snowflake (integrado)</string>
@@ -74,14 +73,14 @@
     <string name="action_reload_circuits">Recarregar circuitos</string>
     <string name="bridge_settings">Configurar ponte</string>
     <string name="bridges">Pontes</string>
-    <string name="built_in_bridges">Escolha uma ponte integrada</string>
+    <string name="built_in_bridges">Suas pontes</string>
     <string name="obfs4_built_in">obfs4 (integrado)</string>
     <string name="none">Nenhum</string>
-    <string name="obfs4_description">Faz com que seu tráfego pareça dados aleatórios</string>
-    <string name="snowflake_description">Roteia sua conexão por meio de proxies Snowflake para fazer parecer que você está fazendo uma videochamada</string>
-    <string name="add_new_bridge">Adicionar uma nova ponte</string>
+    <string name="obfs4_description">Disfarça seu tráfego como dados aleatórios</string>
+    <string name="snowflake_description">Disfarça seu tráfego como uma chamada de vídeo</string>
+    <string name="add_new_bridge">Adicionar novas pontes</string>
     <string name="bridge_address">Insira o endereço da ponte</string>
-    <string name="bridge_address_description">Adicione uma ponte fornecida por uma organização confiável ou alguém que você conhece</string>
+    <string name="bridge_address_description">Cole os endereços de ponte que você já conhece</string>
     <string name="bridge_addresses">Endereços de ponte</string>
     <string name="action_paste_bridges">Cole os endereços da sua ponte aqui</string>
     <string name="manual_bridge">Seleção manual</string>
@@ -95,50 +94,50 @@
     <string name="snowflake">Snowflake</string>
     <string name="label_some_protected">Alguns apps protegidos</string>
     <string name="always_on_vpn_description">Abrir as configurações do sistema Android</string>
-    <string name="guide_bullet_text_2">Esta é uma versão de pré-lançamento do aplicativo e não é segura para uso em atividades confidenciais.</string>
+    <string name="guide_bullet_text_2">Esta é uma versão de pré-lançamento do app e não é segura para uso em atividades confidenciais.</string>
     <string name="quickstart_description">Conecte-se à rede Tor automaticamente quando iniciado</string>
-    <string name="exit_location_description">O modo automático seleciona relés de saída de qualquer lugar da rede, independente da localização. Isso ajuda a proteger seu anonimato, evitando que suas atividades sejam vinculadas.</string>
-    <string name="description_independent_tor_powered_app">Este aplicativo usa sua própria conexão Tor, independente da VPN Tor. Visualize e configure sua conexão em %1$s.</string>
-    <string name="new_connection">%1$s-&gt;%2$s: NOVA conexão com %3$s (aplicativo %4$d)</string>
-    <string name="failed_connection">%1$s-&gt;%2$s: FALHA na conexão com %3$s: %4$s (aplicativo %5$d)</string>
-    <string name="reload_all_circuits_description">Novos circuitos serão estabelecidos para todos os seus aplicativos. Como resultado, alguns aplicativos e sites podem não reconhecê-lo e desconectá-lo de seus serviços.</string>
-    <string name="reload_app_circuits_description">Novos circuitos serão estabelecidos apenas para este aplicativo. Como resultado, alguns aplicativos e sites podem não reconhecê-lo e desconectá-lo de seus serviços.</string>
+    <string name="exit_location_description">Ao usar o Tor, os sites e apps pensarão que você está se conectando do mesmo país que o seu relé de saída, que é o salto final em cada um dos seus circuitos Tor.</string>
+    <string name="description_independent_tor_powered_app">Este app usa sua própria conexão Tor, independente da VPN Tor. Visualize e configure sua conexão em %1$s.</string>
+    <string name="new_connection">%1$s-&gt;%2$s: NOVA conexão com %3$s (app %4$d)</string>
+    <string name="failed_connection">%1$s-&gt;%2$s: FALHA na conexão com %3$s: %4$s (app %5$d)</string>
+    <string name="reload_all_circuits_description">Novos circuitos serão estabelecidos para todos os seus apps. Como resultado, alguns apps e sites podem não reconhecê-lo e desconectá-lo de seus serviços.</string>
+    <string name="reload_app_circuits_description">Novos circuitos serão estabelecidos apenas para este app. Como resultado, alguns apps e sites podem não reconhecê-lo e desconectá-lo de seus serviços.</string>
     <string name="routed_over_country">Roteado por %1$s</string>
     <string name="unknown">Desconhecido</string>
     <string name="guide_got_it">Entendi</string>
     <string name="connect_direct_to_tor">Conecte-se diretamente ao Tor</string>
     <string name="idle_toolbar_title">Tor VPN</string>
     <string name="circuits">Circuitos</string>
-    <string name="get_new_bridges">Obtenha novas pontes</string>
+    <string name="get_new_bridges">Encontrar mais pontes</string>
     <string name="get_new_bridges_description">Como os endereços das pontes não são públicos, você precisará solicitar um ao Projeto Tor.</string>
-    <string name="up">Acima</string>
-    <string name="down">Abaixo</string>
-    <string name="tor_powered_app">Aplicativos fornecidos por Tor</string>
+    <string name="up">Up</string>
+    <string name="down">Down</string>
+    <string name="tor_powered_app">Apps desenvolvidos por Tor</string>
     <string name="guard">Guard</string>
-    <string name="apps_description">Selecionar aplicativos para rotear através do Tor</string>
+    <string name="apps_description">Selecionar apps para rotear através do Tor</string>
     <string name="general">Geral</string>
     <string name="general_description">Definir configurações gerais</string>
     <string name="appearance">Aparência</string>
-    <string name="launcher_hint">Escolha um ícone e um nome para sua tela inicial e menu de aplicativos. O ícone e o nome padrão do Tor VPN ainda serão usados nas notificações.</string>
+    <string name="launcher_hint">Escolha um ícone e um nome para sua tela inicial e menu de apps. O ícone e o nome padrão do Tor VPN ainda serão usados nas notificações.</string>
     <string name="warnings">Atenção</string>
     <string name="new_circuits_warnings">Avisos de novos circuitos</string>
     <string name="name_and_icon">Nome e ícone</string>
     <string name="new_circuits_warnings_description">Avisar antes de recarregar os circuitos.</string>
-    <string name="new_bridges">Eu preciso de novas pontes</string>
+    <string name="new_bridges">Me dê novas pontes</string>
     <string name="fetching_bridges">Buscando suas novas pontes…</string>
     <string name="new_bridges_result">Aqui estão suas novas pontes:</string>
     <string name="bot_msg_results">Aqui estão suas pontes</string>
-    <string name="use_bridges">Usar pontes</string>
+    <string name="use_bridges">Salvar pontes</string>
     <string name="bridge_bot">Ponte Bot</string>
     <string name="bot_msg_welcome">Bem-vindo, viajante cansado</string>
     <string name="start_again">Iniciar novamente</string>
     <string name="signal">Signal</string>
-    <string name="report_bug">Reportar um erro</string>
+    <string name="report_bug">Informar um erro</string>
     <string name="contact_support">Contatar o suporte</string>
     <string name="email">Email</string>
     <string name="whatsapp">WhatsApp</string>
     <string name="view_faq">Veja nossas perguntas frequentes</string>
-    <string name="help_description_wip">O Tor VPN é um trabalho em andamento e alguns recursos podem não funcionar conforme o esperado.</string>
+    <string name="help_description_wip">Tor VPN é um trabalho em andamento e algumas funcionalidades podem não funcionar conforme o esperado.</string>
     <string name="help_description_bug_report">Se você encontrar um problema que não foi respondido em nossas \"Perguntas frequentes\", abra um relatório de bug ou entre em contato com o suporte.</string>
     <string name="bug_tor_forum">No Fórum Tor</string>
     <string name="bug_gitlab">Gitlab</string>
@@ -146,4 +145,36 @@
     <string name="obfs4_bridge">ponte obfs4</string>
     <string name="refresh_all_circuits">Atualizar todos os circuitos?</string>
     <string name="change">Alterar</string>
+    <string name="about">Sobre</string>
+    <string name="about_description">Saiba mais sobre Tor VPN</string>
+    <string name="version">Versão</string>
+    <string name="about_description_long">Tor VPN é um app VPN experimental feito por %1$s, desenvolvedores do Tor e do Navegador Tor — as ferramentas mais poderosas do mundo para a sua privacidade e liberdade online.</string>
+    <string name="tor_project">Projeto Tor</string>
+    <string name="last_updated">Ultima atualização</string>
+    <string name="no_internet">Sem internet</string>
+    <string name="up_content_description">Upload</string>
+    <string name="exit_location_safest">Mais seguro ainda</string>
+    <string name="down_content_description">Download</string>
+    <string name="app_routing_system_apps">Apps do sistema</string>
+    <string name="privacy_policy">Política de privacidade</string>
+    <string name="open_source_licenses">Licenças de código aberto</string>
+    <string name="app_icon">Ícone do app</string>
+    <string name="connect_automatically">Conectar automaticamente</string>
+    <string name="connect_automatically_description">Conecte-se à rede Tor automaticamente quando iniciado</string>
+    <string name="advanced">Avançado</string>
+    <string name="default_icon_and_name">Nome e ícone padrão</string>
+    <string name="app_routing_show_apps">Mostrar %1$s app(s)</string>
+    <string name="current_state">Estado atual:</string>
+    <string name="about_tor_vpn">Sobre o Tor VPN</string>
+    <string name="no_bridge">Não usar pontes</string>
+    <string name="app_routing_hide_apps">Ocultar %1$s app(s)</string>
+    <string name="the_internet">A Internet</string>
+    <string name="app_name_variant_3" translatable="false">Ping Pong</string>
+    <string name="stats_down" translatable="false">%1$s</string>
+    <string name="obfs4" translatable="false">obfs4</string>
+    <string name="stats_up" translatable="false">%1$s</string>
+    <string name="app_name_variant_1" translatable="false">Calculator</string>
+    <string name="app_name_variant_2" translatable="false">Flashlight</string>
+    <string name="add_bridge">Adicionar pontes</string>
+    <string name="copied_clipboard">Copiado para a área de transferência</string>
 </resources>
