--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -14,7 +14,7 @@
     <string name="action_stop">Остановить VPN</string>
     <string name="action_copy_logs">Скопировать логи</string>
     <string name="state_connected">Подключено</string>
-    <string name="state_connecting">Подключение</string>
+    <string name="state_connecting">Подключение…</string>
     <string name="always_on_vpn">Постоянно включенный VPN</string>
     <string name="state_disconnecting">Отключение</string>
     <string name="state_disconnected">Отключен</string>
@@ -25,26 +25,26 @@
     <string name="apps_description_all_protected">Все приложения защищены</string>
     <string name="tor_logs">Логи Tor</string>
     <string name="tor_logs_description">Просмотр и копирование логов Tor</string>
-    <string name="guide_bullet_head_1">Вы готовы начать тестирование</string>
+    <string name="guide_bullet_head_1">Сообщить о багах</string>
     <string name="always_on_vpn_description">Откройте системные настройки Android</string>
     <string name="guide_bullet_head_2">Но не делайте ничего рискованного</string>
     <string name="guide_bullet_text_1">Не забывайте сообщать нашим разработчикам о любых найденных ошибках.</string>
     <string name="guide_bullet_text_2">Это предварительная версия приложения, и ее небезопасно использовать для конфиденциальных действий.</string>
-    <string name="stats_down">%1$s</string>
-    <string name="stats_up">%1$s</string>
+    <string name="stats_down" translatable="false">%1$s</string>
+    <string name="stats_up" translatable="false">%1$s</string>
     <string name="stats_delta">%1$s/с</string>
     <string name="error_something_went_wrong">Что-то пошло не так</string>
     <string name="error_detail_message">Tor VPN не удалось подключиться к сети Tor.</string>
-    <string name="error_view_logs">Просмотр логов</string>
+    <string name="error_view_logs">Просмотр логов Тора</string>
     <string name="connection">Соединение</string>
     <string name="connection_description">Настройте способ подключения к Tor</string>
     <string name="kill_switch">Аварийное отключение</string>
     <string name="kill_switch_description">Заблокируйте приложениям подключение к Интернету, если сеть Tor недоступна</string>
     <string name="quickstart">Автоподключение</string>
     <string name="quickstart_description">Автоматическое подключение к сети Tor при запуске</string>
-    <string name="exit_location_description">Автоматический режим выбирает выходные узлы из любой точки в сети, независимо от местоположения. Это помогает защитить вашу анонимность, предотвращая связывание ваших действий.</string>
+    <string name="exit_location_description">При использовании Tor веб-сайты и приложения будут думать, что вы подключаетесь из той страны, что и выходное реле, которое является финальным прыжком в вашей цепочке Tor.</string>
     <string name="exit_location">Место выхода</string>
-    <string name="exit_location_automatic">Автоматически (самый безопасный)</string>
+    <string name="exit_location_automatic">Случайно для каждой цепочки</string>
     <string name="action_open_app">Открыть %1$s</string>
     <string name="up">Вверх</string>
     <string name="down">Вниз</string>
@@ -55,10 +55,10 @@
     <string name="bootstrap_at">Начальная загрузка по адресу: %1$s</string>
     <string name="new_connection">%1$s-&gt;%2$s: НОВОЕ подключение к %3$s (приложение %4$d)</string>
     <string name="action_reload_circuits">Перезагрузить цепочки</string>
-    <string name="new_connection_hop">%1$s-&gt;%2$s: переход %3$d: %4$s (%5$s)</string>
+    <string name="new_connection_hop">%1$s-&gt;%2$s: прыжок %3$d: %4$s (%5$s)</string>
     <string name="failed_connection">%1$s-&gt;%2$s: ОШИБКА подключения к %3$s: %4$s (приложение %5$d)</string>
-    <string name="reload_all_circuits_description">Новые цепочки будут установлены для всех ваших приложений. Некоторые приложения и веб сайты могут не узнать вас в результате этого и инициируют выход из своих сервисов.</string>
-    <string name="reload_app_circuits_description">Новые цепочки будут установлены только для этого приложения. Некоторые приложения и веб сайты могут не узнать вас в результате этого и инициируют выход из своих сервисов.</string>
+    <string name="reload_all_circuits_description">Новые цепочки будут установлены для всех ваших приложений. Некоторые приложения и веб-сайты могут не узнать вас в результате этого и инициируют выход из своих сервисов.</string>
+    <string name="reload_app_circuits_description">Новые цепочки будут установлены только для этого приложения. Некоторые приложения и веб-сайты могут не узнать вас в результате этого и инициируют выход из своих сервисов.</string>
     <string name="reload_app_circuits">Обновить эту цепочку?</string>
     <string name="app_name">Tor VPN</string>
     <string name="app_routing_other_apps">Другие приложения</string>
@@ -73,8 +73,7 @@
     <string name="unknown">Неизвестно</string>
     <string name="connect_direct_to_tor">Подключайтесь напрямую к Tor</string>
     <string name="circuit_app_description">Цепочка для %1$s</string>
-    <string name="title_guide">Это приложение
-\nэкспериментальное</string>
+    <string name="title_guide">Это приложение \nэкспериментальное</string>
     <string name="guide_version_number" translatable="false">%1$s</string>
     <string name="use_a_bridge_info">Мосты помогают вам безопасно получить доступ к сети Tor в местах, где Tor заблокирован. В зависимости от вашего местонахождения, один мост может работать лучше другого.</string>
     <string name="bridge_option_obfs4_built">obfs4 (встроенный)</string>
@@ -82,8 +81,8 @@
     <string name="action_paste_bridges">Вставьте сюда адреса ваших мостов</string>
     <string name="none">Нет</string>
     <string name="bridges">Мосты</string>
-    <string name="add_new_bridge">Добавить новый мост</string>
-    <string name="obfs4_description">Делает трафик похожим на случайные данные</string>
+    <string name="add_new_bridge">Добавьте новые мосты</string>
+    <string name="obfs4_description">Маскирует ваш трафик под случайные данные</string>
     <string name="bridge_settings">Настройки моста</string>
     <string name="obfs4_built_in">obfs4 (встроенный)</string>
     <string name="debugging">Отладка</string>
@@ -98,16 +97,16 @@
     <string name="current_bridge">Текущий мост</string>
     <string name="snowflake">Snowflake</string>
     <string name="bridge_addresses">Адреса мостов</string>
-    <string name="bridge_address_description">Добавьте мост, предоставленный доверенной организацией или кем-то из ваших знакомых</string>
+    <string name="bridge_address_description">Вставьте известные вам адреса мостов</string>
     <string name="action_save">Сохранить</string>
-    <string name="snowflake_description">Направляет ваше соединение через прокси-серверы Snowflake, чтобы выглядело так, будто вы совершаете видеозвонок</string>
+    <string name="snowflake_description">Маскирует ваш трафик под видеозвонок</string>
     <string name="manual_bridge">Ручной выбор</string>
-    <string name="built_in_bridges">Выберите встроенный мост</string>
+    <string name="built_in_bridges">Ваши мосты</string>
     <string name="description_independent_tor_powered_app">Это приложение использует собственное подключение к Tor, независимое от Tor VPN. Вместо этого просмотрите и настройте его соединение в %1$s.</string>
     <string name="telegram">Telegram</string>
-    <string name="get_new_bridges">Получить новые мосты</string>
-    <string name="get_new_bridges_description">Поскольку адреса мостов не являются общедоступными, вам нужно запросить их у Tor Project.</string>
-    <string name="ask_bridge_bot">Запросите мосты у бота</string>
+    <string name="get_new_bridges">Найти другие мосты</string>
+    <string name="get_new_bridges_description">Поскольку адреса мостов не являются общедоступными, нужно будет запросить адрес у Tor Project.</string>
+    <string name="ask_bridge_bot">Запросить мосты</string>
     <string name="web_bot_subtitle">Посетите %s</string>
     <string name="remove_bridge">Удалить адреса мостов</string>
     <string name="label_some_protected">Есть защищённые</string>
@@ -126,27 +125,57 @@
     <string name="start_again">Запустить снова</string>
     <string name="signal">Сигнал</string>
     <string name="report_bug">Сообщить об ошибке</string>
-    <string name="contact_support">Служба поддержки</string>
+    <string name="contact_support">Связаться с поддержкой</string>
     <string name="email">Email</string>
     <string name="refresh_all_circuits">Обновить все цепочки?</string>
-    <string name="new_bridges">Мне нужны новые мосты</string>
+    <string name="new_bridges">Дайте мне новые мосты</string>
     <string name="new_bridges_result">Ваши новые мосты:</string>
     <string name="bug_gitlab">Через Gitlab</string>
-    <string name="bot_msg_welcome">Привет, усталый путник</string>
-    <string name="bot_msg_results">Ваши мосты</string>
+    <string name="bot_msg_welcome">Добро пожаловать, усталый путник</string>
+    <string name="bot_msg_results">Вот ваши мосты:</string>
     <string name="new_circuits_warnings">Предупреждения о новых цепочках</string>
     <string name="action_refresh">Обновить</string>
     <string name="fetching_bridges">Получение новых мостов…</string>
     <string name="launcher_hint">Выберите иконку и название для главного экрана и для списка всех приложений. Стандартная иконка и название по прежнему будут использоваться в уведомлениях.</string>
-    <string name="bridge_bot">Мост Бот</string>
-    <string name="help_description_bug_report">Если вы столкнулись с проблемой, которая не описанна в FAQ, создайте отчёт об ошибке или свяжитесь с поддержкой.</string>
+    <string name="bridge_bot">Бот мостов</string>
+    <string name="help_description_bug_report">Если вы столкнулись с проблемой, которая не описана в FAQ, создайте отчёт об ошибке или свяжитесь с поддержкой.</string>
     <string name="name_and_icon">Название и иконка</string>
     <string name="new_circuits_warnings_description">Предупреждать перед перезагрузкой цепочек.</string>
     <string name="view_faq">Посмотреть наш FAQ</string>
     <string name="help_description_wip">Tor VPN находится на стадии разработки, и некоторые функции могут работать не так, как ожидалось.</string>
-    <string name="bug_tor_forum">Через Tor Torum</string>
+    <string name="bug_tor_forum">На форуме Tor</string>
     <string name="change">Изменить</string>
-    <string name="use_bridges">Использовать мосты</string>
+    <string name="use_bridges">Сохранить мосты</string>
     <string name="whatsapp">Whatsapp</string>
-    <string name="obfs4_bridge">obfs4 мост</string>
+    <string name="obfs4_bridge">мост obfs4</string>
+    <string name="about">О приложении</string>
+    <string name="version">Версия</string>
+    <string name="last_updated">Последнее обновление</string>
+    <string name="tor_project">Проект Tor</string>
+    <string name="about_description">Узнайте больше о Tor VPN</string>
+    <string name="about_description_long">Tor VPN - это экспериментальное VPN-приложение, созданное %1$s, разработчиками Tor и браузера Tor - самых сильных в мире инструментов для обеспечения конфиденциальности и свободы в Интернете.</string>
+    <string name="no_internet">Нет интернета</string>
+    <string name="app_routing_system_apps">Системные приложения</string>
+    <string name="exit_location_safest">Высший</string>
+    <string name="up_content_description">Загрузить</string>
+    <string name="down_content_description">Скачать</string>
+    <string name="advanced">Дополнения</string>
+    <string name="privacy_policy">Политика конфиденциальности</string>
+    <string name="open_source_licenses">Лицензии с открытым исходным кодом</string>
+    <string name="app_icon">Значок приложения</string>
+    <string name="connect_automatically">Соединяться автоматически</string>
+    <string name="connect_automatically_description">Автоматическое подключение к сети Tor при запуске</string>
+    <string name="about_tor_vpn">О Tor VPN</string>
+    <string name="no_bridge">Не используя мосты</string>
+    <string name="app_routing_show_apps">Показать %1$s приложения</string>
+    <string name="default_icon_and_name">Значок и название по умолчанию</string>
+    <string name="current_state">Текущее состояние:</string>
+    <string name="app_routing_hide_apps">Скрыть %1$s приложения</string>
+    <string name="the_internet">Интернет</string>
+    <string name="obfs4" translatable="false">obfs4</string>
+    <string name="app_name_variant_3" translatable="false">Ping Pong</string>
+    <string name="app_name_variant_1" translatable="false">Calculator</string>
+    <string name="app_name_variant_2" translatable="false">Flashlight</string>
+    <string name="copied_clipboard">Скопировано в буфер обмена</string>
+    <string name="add_bridge">Добавить мосты</string>
 </resources>
